# app-template

./: .gitignore  .gitmodules  CMakeLists.txt
.github/: build-android.yml  build-ios.yml  main.yml
.github/workflows/: build-android.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-windows.yml  main.yml
android/: build.gradle  ndk_configure  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/xyz/fragcolor/fragments/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/xyz/fragcolor/fragments/: MainActivity.kt
android/app/src/test/java/xyz/fragcolor/fragments/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
app/: CMakeLists.txt  entry.edn  main.cpp
app/android/: AndroidManifest.xml
app/android/src/: AppActivity.java
fragments/: CMakeLists.txt  entry.edn  main.cpp  main1.cpp
remote/: CMakeLists.txt  commands.hpp  router.hpp
remote/client/: main.cpp
remote/server/: main.cpp  tests.cpp
scripts/android/: build_and_debug  debug  install
